--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "test": "jest",
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.12.1",
     "@storybook/addon-actions": "^5.3.2",
     "@storybook/addon-knobs": "^5.3.3",
     "@storybook/addon-links": "^5.3.2",
