--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/helper-compilation-targets": "^7.12.1",
+    "@sambego/storybook-state": "^2.0.1",
     "@storybook/addon-actions": "^5.3.2",
     "@storybook/addon-knobs": "^5.3.3",
     "@storybook/addon-links": "^5.3.2",
